# slit_controller

./: .gitignore  Cargo.toml  README.md  default_config.toml
cooled_slit_controller/: Cargo.toml  default_config.toml
cooled_slit_controller/scripts/: build_and_setup.sh  safe_restart.sh
cooled_slit_controller/scripts/service_files/: cooled-slit-controller-restart.service  cooled-slit-controller-restart.timer  cooled-slit-controller.service
cooled_slit_controller/src/: main.rs  models.rs
cooled_slit_controller/src/command_executor/motor/: command_sender.rs  commands.rs  mod.rs
cooled_slit_controller/src/command_executor/sensors/: command_sender.rs  commands.rs  mod.rs
cooled_slit_controller/src/communication/: commands.rs  communication.rs  mod.rs  service.rs
cooled_slit_controller/src/controller/: controller_service.rs  move_thread.rs  multi_axis.rs  single_axis.rs
cooled_slit_controller/src/controllers/: mod.rs
cooled_slit_controller/src/controllers/cooled_slit/: axis.rs  config.rs  controller.rs  mod.rs  motor.rs  params.rs
filter/: Cargo.toml  default_config.toml
filter/src/: config.rs  main.rs
filter/src/command_executor/: mod.rs
filter/src/command_executor/encoder/: command_sender.rs  commands.rs  mod.rs
filter/src/command_executor/motor/: command_sender.rs  commands.rs  mod.rs
filter/src/controllers/filter/: axis.rs  config.rs  controller.rs  mod.rs  motor.rs  params.rs
slit_controller/: Cargo.toml  default_config.toml
slit_controller/scripts/: build_and_setup.sh  build_and_setup_slit_controller.sh  safe_restart.sh
slit_controller/scripts/service_files/: slit-controller-restart.service  slit-controller.service
slit_controller/src/: commands.rs  communication.rs  config.rs  controller_service.rs  lib.rs  logging.rs  main.rs  models.rs  state_monitor.rs
slit_controller/src/command_executor/: mod.rs
slit_controller/src/command_executor/encoder/: command_sender.rs  commands.rs  mod.rs
slit_controller/src/command_executor/motor/: command_sender.rs  commands.rs  mod.rs
slit_controller/src/communication/: commands.rs  communication.rs
slit_controller/src/controller/: controller_service.rs  mod.rs  move_thread.rs  multi_axis.rs  single_axis.rs  state_monitor.rs
slit_controller/src/controllers/: mod.rs
xafs/: Cargo.toml  default_config.toml
xafs/src/: config.rs  logging.rs  main.rs  models.rs
xafs/src/command_executor/: mod.rs
xafs/src/command_executor/motor/: mod.rs  (+1 more)
xafs/src/communication/: commands.rs  communication.rs  mod.rs
xafs/src/controller/: controller_service.rs  mod.rs  move_thread.rs  multi_axis.rs  single_axis.rs  state_monitor.rs
xafs/src/controllers/: config.rs  mod.rs
(+65 files in other folders)
