[package]
name = "filter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.23"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"

em2rs = { path = "../em2rs" }
utilities = { path = "../utilities" }
lir = { path = "../lir" }

motarem = { git = "https://github.com/Tombleron/motarem.git" }
