[package]
name = "slit_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
rf256 = { path = "../rf256" }
standa = { path = "../standa" }
trid = { path = "../trid" }
utilities = { path = "../utilities" }

anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
config = "0.15.18"
thiserror = "2.0.17"
