[package]
name = "xafs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1.89"

utilities = { path = "../utilities" }
trid = { path = "../trid" }
lir = { path = "../lir" }
em2rs = { path = "../em2rs" }
toml = "0.8.23"
serde = { version = "1.0.228", features = ["derive"] }

motarem = { git = "https://github.com/Tombleron/motarem.git" }
